CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
set(PACKAGE_NAME "httpfs2" CACHE STRING "Program name")
PROJECT(${PACKAGE_NAME})

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
set(CMAKE_USE_RELATIVE_PATHS TRUE)


include(DeriveVersionFromGitTag)

set(PACKAGE_VERSION ${VERSION})
set(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")

FIND_PACKAGE(fuse REQUIRED)
FIND_PACKAGE(GnuTLS REQUIRED)
FIND_PACKAGE(Threads)
#FIND_PACKAGE(CURL)
if(GNUTLS_FOUND)
	set(USE_SSL ON CACHE BOOL "Enable SSL")
endif()

set(HTTPFS2_USE_AUTH 1 CACHE BOOL "Enable md5 auth")
set(HTTPFS2_USE_SSL ${GNUTLS_FOUND} CACHE BOOL "Enable SSL")
set(HTTPFS2_USE_THREADS ${CMAKE_HAVE_PTHREAD_H} CACHE BOOL "Enable threading")


set(HTTPFS2_CERT_STORE "/etc/ssl/certs/ca-certificates.crt" CACHE STRING "Root CA certificates")
set(HTTPFS2_TIMEOUT 30 CACHE NUMBER "HTTP timeout")
set(HTTPFS2_CONSOLE "/dev/console" CACHE string "Console device")
set(HTTPFS2_HEADER_SIZE 1024 CACHE NUMBER "Header size")
set(HTTPFS2_MAX_REQUEST "(32*1024)" CACHE NUMBER "Max request")
set(HTTPFS2_MAX_REDIRECTS 32 CACHE NUMBER "Max redirects")
set(HTTPFS2_TNAME_LEN 13 CACHE NUMBER "TNAME_LEN")
set(HTTPFS2_RESET_RETRIES 8 CACHE NUMBER "RESET_RETRIES")

#define VERSION "0.1.5 \"The Message\""


configure_file(${CMAKE_SOURCE_DIR}/cmake/config.h.in ${CMAKE_SOURCE_DIR}/config.h)

include_directories(${PACKAGE_NAME} ${OpenCL_INCLUDE_DIR} ${FUSE_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS} ${GNUTLS_INCLUDE_DIR})
file(GLOB sources "${CMAKE_SOURCE_DIR}/*.[ch]" "${CMAKE_SOURCE_DIR}/*.[ch]pp")

add_executable(${PACKAGE_NAME} ${sources})
target_compile_options(${PACKAGE_NAME} PRIVATE ${PC_FUSE_CFLAGS})
target_link_libraries(${PACKAGE_NAME} PRIVATE ${FUSE_LIBRARIES} ${GNUTLS_LIBRARY} ${CURL_LIBRARIES})
